# SKN25-FINAL-KYJ

./: .env.example  .gitignore  AGENTS.md  README.ko.md  README.md  pyproject.toml  requirements.txt
docs/: ai-core-data-policy.md  request-exam.md
examples/debezium/: outbox-connector.json
examples/env/: external.env  hybrid.env  local-postgres-external-services.env  local.env
migrations/: env.py
migrations/sql/20260513_0001_create_projection_storage/: 00_extensions.sql  10_tenant_and_source_snapshots.sql  10_tenant_and_sources.sql  15_source_document_folder_relations.sql  20_document_projections.sql  30_folder_projections.sql  40_vector_projection_ledger.sql  50_projection_outbox.sql  90_projection_lookup_indexes.sql
migrations/sql/20260513_0002_create_task_storage/: 00_task_core.sql  10_host_actions.sql  20_task_events.sql
migrations/versions/: 20260513_0001_create_profile_storage.py  20260513_0001_create_projection_storage.py  20260513_0002_create_task_storage.py
resources/prompts/: answer_generation.md  document_profiling.md  draft_generation.md  execution_judge.md  ideas_exploration.md  summarization.md
scripts/: reindex_documents.py  replay_dead_letter_events.py  replay_dlq.py  run_api.sh  run_worker.sh
src/ai_core/: __init__.py  bootstrap.py
src/ai_core/agents/: __init__.py  action_decider.py  answer_generator.py  draft_generator.py  folder_recommender.py  query_interpreter.py  search_agent.py  summarizer.py
src/ai_core/api/: __init__.py  app.py  errors.py  settings.py
src/ai_core/application/: __init__.py
src/ai_core/common/: __init__.py  validation.py
src/ai_core/domain/: __init__.py  actions.py  chunks.py  documents.py  folders.py  tasks.py
src/ai_core/infrastructure/: __init__.py
src/ai_core/interfaces/: __init__.py  document_keyword_store.py  document_vector_store.py  embedding.py  folder_vector_store.py  llm.py  task_store.py
src/ai_core/schemas/: __init__.py  action_plan.py  actions.py  answer.py  assistant.py  chunk.py  indexed.py  llm.py  query.py  recommendation.py  retrieval.py  source.py  source_document.py  source_folder.py  task.py
src/ai_core/workflows/: __init__.py  executor.py  graph.py  planner.py  state.py
src/foldmind_ai_core/: __init__.py  main.py
src/foldmind_ai_core/application/: errors.py
src/foldmind_ai_core/bootstrap/: api_services.py  api_use_cases.py  app_factory.py  configured_app.py  observability.py  outbox_worker.py  settings.py
src/foldmind_ai_core/core/: __init__.py
src/foldmind_ai_core/domain/: common.py
src/foldmind_ai_core/shared/: __init__.py  canonical_json.py  input_digest.py  internal_ids.py  source_versions.py  types.py  validation.py
src/foldmind_ai_core/workers/: outbox_runtime.py  outbox_worker.py
tests/: test_api_routes.py  test_bootstrap.py  test_contracts.py
tests/contract/app_server_to_ai_core/: __init__.py  test_api_routes.py
tests/contract/next_action_schema/: __init__.py  test_contracts.py
tests/unit/adapters/: test_messaging_adapter.py  test_model_codec.py  test_openai.py  test_outbox_worker_runtime.py  test_postgres_adapters.py  test_postgres_migration.py  test_vector_and_graph_adapters.py  test_workflow_runtime_nodes.py
tests/unit/agents/: test_prompt_wiring.py
tests/unit/application/: test_architecture.py  test_bootstrap.py  test_document_retrieval.py  test_folder_recommendation.py  test_folder_recommendation_source_resolver.py  test_generation_results.py  test_get_task.py  test_host_action_builder.py  test_host_action_result_service.py  test_hybrid_profile_retrieval.py  test_indexing_services.py  test_outbox_events.py  (+14 more)
(+521 files in other folders)
