[project]
name = "foldmind-ai-core"
version = "0.1.0"
description = "AI workflow core for FoldMind personal knowledge management."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16",
    "confluent-kafka>=2.6",
    "dependency-injector>=4.48",
    "fastapi>=0.115",
    "langgraph>=1.0",
    "langgraph-checkpoint>=2.1,<5.0",
    "langgraph-checkpoint-postgres>=2.0",
    "openai>=2.36,<3.0",
    "opentelemetry-api>=1.38",
    "opentelemetry-sdk>=1.38",
    "opentelemetry-instrumentation-sqlalchemy>=0.59b0",
    "pydantic>=2.8",
    "pydantic-settings>=2.7",
    "asyncpg>=0.29",
    "qdrant-client>=1.12",
    "neo4j>=5.25",
    "SQLAlchemy>=2.0",
    "tenacity>=9.1",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foldmind_ai_core"]

[tool.hatch.build.targets.wheel.force-include]
"src/foldmind_ai_core/resources/prompts" = "foldmind_ai_core/resources/prompts"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "confluent_kafka",
    "dependency_injector",
    "neo4j",
    "openai",
    "opentelemetry",
    "opentelemetry.*",
    "qdrant_client",
]
ignore_missing_imports = true
